--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "type": "module",
+  "compilerOptions": {
+    "esModuleInterop": true
+  },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
+    "commander": "^11.1.0",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "supertest": "^6.3.3"
