--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "commander": "^11.1.0",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "readline-sync": "^1.4.10",
     "supertest": "^6.3.3"
   },
   "scripts": {
     "test": "jest --coverage",
-    "start": "npx tsx .\\src\\GraphQLServer.ts"
+    "start": "npx tsx .\\src\\server.ts start 4001"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
