--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "readline-sync": "^1.4.10",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "tsx":"^4.7.1"
   },
   "scripts": {
     "test": "jest --coverage",
-    "start": "npx tsx .\\src\\server\\server.ts start 4001"
+    "start": "npx tsx .//src//server//server.ts start 4001"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
